--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,143 @@
-.App {
-  text-align: center;
+:root {
+    font-size: 62.5%;
+    --color-primary: #13203B;
+    --color-secondary: #fa5c2c;	
+    --color-font: #e99b42;
+
+    --color-shadow: #5d5285;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    transition: 0.5s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html, body {
+    /* height: 100%; */
+    font-size: 1.6rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+p, h1, button {
+    color: var(--color-font);
+    cursor: default;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+    font-size: 3.2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+    margin-top: 8rem;
+    font-size: 3.2rem;
 }
+
+/* /content/ */
+
+.container {
+    background-color: var(--color-primary);
+    margin-inline: auto;
+    padding-inline: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+section {
+    height: 100vh;
+}
+
+.painel {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    width: 20rem;
+    margin-block: 7rem;
+    padding: 1rem;
+    border-radius: 10rem;
+    -webkit-box-shadow: 0px 0px 41px 28px var(--color-shadow);
+    box-shadow: 0px 0px 41px 28px var(--color-shadow);
+}
+
+.painel p {
+    opacity: .8;
+    /* transition: 1s ease-in; */
+}
+
+.painel p.active {
+    opacity: 1;
+    color: var(--color-secondary);
+}
+
+.timer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30rem;
+    height: 30rem;
+    border-radius: 50%;
+    -webkit-box-shadow: 0px 0px 41px 28px var(--color-shadow);
+    box-shadow: 0px 0px 41px 28px var(--color-shadow);
+}
+
+.circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 26rem;
+    height: 26rem;
+    border-radius: 50%;
+    background-color: var(--color-font);
+
+}
+
+.time {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+}
+
+.time p {
+    font-size: 5.6rem;
+    color: var(--color-primary);
+    /* -webkit-text-stroke: 0.2rem var(--color-primary); */
+}
+
+.controls {
+    margin-top: 5rem;
+}
+
+button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    margin: 2.5rem;
+    font-size: 6rem;
+    
+}
+
+button:hover {
+    color: var(--color-secondary);
+}
+
+
+.worktime {
+    --color-primary: #13203B;
+    --color-secondary: #fa5c2c;	
+    --color-shadow: #5d5285;
+    --color-font: #e99b42;
+
+}
+
+.chilltime {
+    --color-primary: #001517; 
+    --color-secondary: #2C9079	;	
+    --color-shadow: #2C9079;
+    --color-font: #fcaf58;
+}
+
+
